added style.css. David

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
 <body>
    <p>Radio check. Pilot, please confirm. Daphne Zhu</p>
    <p>I am David. David Dong</p>
